# ncview2

./: .gitignore  README.md  environment.yml  install_conda_local.sh  install_nird.sh  install_olivia.sh  install_pip_local.sh  pyproject.toml  setup_env.sh
ncview2/: __init__.py  __main__.py  app.py  colormaps.py  controls.py  data_model.py  main_window.py  profile_canvas.py  spatial_canvas.py  timeseries_canvas.py
tests/: make_test_data.py
