[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ncview2"
version = "0.1.0"
description = "A modern NetCDF visual browser"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "xarray",
    "netcdf4",
    "numpy",
    "scipy",
    "matplotlib>=3.5",
    "PySide6>=6.5",
    "nc-time-axis",
    "h5py",
    "cftime",
]

[project.optional-dependencies]
geo = ["cartopy>=0.21", "cmocean"]
dev = ["pytest", "ruff"]

[project.scripts]
ncview2 = "ncview2.app:main"

[tool.ruff]
line-length = 100
